# esi-dev4-project2

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  doxygen
resources/: cards.qrc
resources/css/components/: card.css
resources/images/cards/: Cards.ai
src/: main.cpp
src/controller/: controller.cpp  controller.hpp
src/model/: model.cpp  model.hpp
src/model/cards/: card.cpp  card.hpp  cardcollection.cpp  cardcollection.hpp  cardtype.hpp  deck.cpp  deck.hpp
src/model/game/: game.cpp  game.hpp  gamestatus.hpp  player.cpp  player.hpp  round.cpp  round.hpp  roundstatus.hpp  rountstatus.hpp
src/utils/: observable.hpp  observer.hpp
src/view/: view.cpp  view.hpp
src/view/components/: card.cpp  card.hpp  cardhcollection.cpp  cardhcollection.hpp  cardpile.cpp  cardpile.hpp  cardtable.cpp  cardtable.hpp  cardtype.hpp
src/view/scenes/: boardscene.cpp  boardscene.hpp
src/view/widgets/: playerinput.cpp  playerinput.hpp
src/view/windows/: boardwindow.cpp  boardwindow.hpp  cardpickerwindow.cpp  cardpickerwindow.hpp  playerpickerwindow.cpp  playerpickerwindow.hpp  receiverwindow.cpp  receiverwindow.hpp  startwindow.cpp  startwindow.hpp  valuepickerwindow.cpp  valuepickerwindow.hpp
test/: maintest.cpp
test/model/cards/: cardcollectiontest.cpp  cardtest.cpp  decktest.cpp
test/model/game/: playertest.cpp
